@@ -12,5 +12,6 @@
 
 GtkWidget *button_new_mixed(const char *stock, const char *message);
 void report_error(const char *message, ...);
+int get_choice(const char *message, int number_of_buttons, ...);
 
 #endif /* _GUI_SUPPORT_H */
